# layered-nlp

./: .gitignore  .gitmodules  CLAUDE.md  COORDINATION.md  COORDINATION_LOG.md  Cargo.toml  PLAN-CONTRACT-LANGUAGE.md  README.md  mise.toml  ntm.sh
layered-contracts/: Cargo.toml
layered-contracts/docs/: LAYER9-IMPROVEMENTS.md
layered-contracts/src/: accountability_analytics.rs  accountability_graph.rs  clause_aggregate.rs  conflict_detector.rs  contract_clause.rs  contract_keyword.rs  defined_term.rs  deictic.rs  document_aligner.rs  document_structure.rs  lib.rs  linked_obligation_resolver.rs  modal_negation.rs  modal_scope.rs  obligation.rs  obligation_linker.rs  polarity.rs  precedence.rs  pronoun.rs  pronoun_chain.rs  scope_ambiguity.rs  scope_operators.rs  scoped_obligation_resolver.rs  scored.rs  section_reference.rs  section_reference_linker.rs  semantic_diff.rs  semantic_roles.rs  sentence_boundary.rs  temporal.rs  term_reference.rs  terms_of_art.rs  utils.rs  verification.rs
layered-contracts/src/navigable/: association_index.rs
layered-contracts/src/pipeline/: mod.rs
layered-contracts/src/snapshot/: config.rs  construction.rs  display.rs  graph.rs  macros.rs  mod.rs  semantic.rs  types.rs
layered-contracts/src/snapshot/tests/: gate0_storage.rs  gate1_semantic.rs  gate2_macro.rs  gate3_display.rs  gate4_graph.rs  gate5_combined.rs  mod.rs
layered-contracts/src/snapshots/: layered_contracts__document_structure__tests__snapshot_structure.snap  layered_contracts__section_reference__tests__display_snapshot.snap  layered_contracts__section_reference_linker__tests__snapshot.snap  layered_contracts__temporal__tests__display_snapshot.snap
layered-contracts/src/tests/: accountability_analytics.rs  accountability_graph.rs  clause_aggregate.rs  contract_clause.rs  contract_keyword.rs  defined_term.rs  obligation.rs  semantic_roles.rs
layered-contracts/src/tests/snapshots/: layered_contracts__tests__accountability_analytics__accountability_payload_snapshot.snap  layered_contracts__tests__accountability_analytics__party_explorer_groups_by_beneficiary.snap  layered_contracts__tests__accountability_graph__graph_beneficiary_link.snap  layered_contracts__tests__accountability_graph__graph_beneficiary_needs_verification.snap  layered_contracts__tests__accountability_graph__graph_condition_links.snap  layered_contracts__tests__accountability_graph__graph_verified_beneficiary_bonus.snap  layered_contracts__tests__clause_aggregate__aggregate_breaks_on_other_party.snap  layered_contracts__tests__clause_aggregate__aggregate_cross_section_penalty.snap  layered_contracts__tests__clause_aggregate__aggregate_does_not_merge_interleaved_parties.snap  layered_contracts__tests__clause_aggregate__aggregate_gap_at_exact_max_boundary.snap  layered_contracts__tests__clause_aggregate__aggregate_missing_chain_penalty.snap  layered_contracts__tests__clause_aggregate__aggregate_multiple_clauses_same_party.snap  layered_contracts__tests__clause_aggregate__aggregate_relaxed_matching_with_and_without_chain.snap  layered_contracts__tests__clause_aggregate__aggregate_single_clause.snap  layered_contracts__tests__clause_aggregate__aggregate_via_pronoun_chain.snap  layered_contracts__tests__contract_clause__clause_condition_unknown_entity_penalty.snap  layered_contracts__tests__contract_clause__clause_empty_action_penalty.snap  (+88 more)
layered-deixis/: Cargo.toml
layered-deixis/src/: discourse_marker.rs  lib.rs  person_pronoun.rs  place_deictic.rs  temporal_deictic.rs  types.rs
layered-nlp-demo-wasm/: Cargo.toml
layered-nlp-demo-wasm/src/: extractors.rs  lib.rs  manifest.rs
layered-nlp-document/: Cargo.toml
layered-nlp-document/src/: ambiguity.rs  document.rs  lib.rs  reviewable.rs  scope_index.rs  scope_operator.rs  scored.rs  span_link.rs
layered-nlp-specs/: CONTRIBUTING-FIXTURES-FEEDBACK-REQUEST.md  CONTRIBUTING-FIXTURES.md  Cargo.toml
layered-nlp-specs/fixtures/: GLOSSARY.md  README.md  REORG-TODO.md  expected_failures.toml  permission-simple.nlp  pronoun-reference.nlp  simple-obligation.nlp
layered-nlp-specs/fixtures/document/clauses/: README.md  (+4 more)
layered-nlp-specs/src/: assertion.rs  config.rs  context.rs  errors.rs  failures.rs  fixture.rs  formatter.rs  lib.rs  loader.rs  matcher.rs  parser.rs  runner.rs  tests.rs
layered-nlp-specs/src/assertions/: clause.rs  clause_link.rs  defined_term.rs  mod.rs  obligation.rs  pronoun.rs  term_reference.rs
(+229 files in other folders)
