[package]
name = "layered-nlp-demo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
layered-nlp = { path = ".." }
layered-contracts = { path = "../layered-contracts" }
layered-deixis = { path = "../layered-deixis" }
layered-clauses = { path = "../layered-clauses" }
layered-nlp-document = { path = "../layered-nlp-document" }
layered-part-of-speech = { path = "../layered-part-of-speech" }
